<resources>
    <string name="app_name">Euromillones</string>
    <string name="jose_miguel_blanco">Jose Miguel Blanco</string>
    <string name="button">Button</string>
    <string name="logo_main">logo main</string>
    <string name="euromillones">EUROMILLONES</string>
    <string name="v_1_0">V-1.0</string>
    <string name="jmblanco">jmblanco</string>
    <string name="_0">0</string>
    <string name="bote">BOTE</string>
    <string name="el_mill_n">EL MILLÓN</string>
    <string name="generar_resultado">GENERAR RESULTADO</string>
    <string name="comprobar_resultados">COMPROBAR RESULTADOS</string>
    <string name="sorteos_anteriores">SORTEOS ANTERIORES</string>
    <string name="salir">SALIR</string>
    <string name="estad_sticas">ESTADÍSTICAS</string>
    <string name="insert">insert</string>
    <string name="enviar">ENVIAR</string>
    <string name="n_meros">números</string>
    <string name="delete">delete</string>
    <string name="password">password</string>
    <string name="estrellas">estrellas</string>
    <string name="volver">VOLVER</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="secret">******</string>
</resources>