<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:background="#b4b4b4" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:textSize="24sp" android:textStyle="bold" android:textColor="#fafafa" android:id="@+id/bt_oculvol"
            android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="30dp"
            android:text="@string/volver" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:backgroundTint="#c80a0a" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout5" android:background="#ffffff"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintBottom_toTopOf="@+id/bt_oculvol"
                  app:layout_constraintStart_toStartOf="@+id/bt_oculvol"
                  app:layout_constraintEnd_toEndOf="@+id/bt_oculvol" app:layout_constraintTop_toBottomOf="@+id/wb">
        <RadioGroup android:layout_width="match_parent" android:layout_height="match_parent">
            <RadioButton android:textStyle="bold" android:id="@+id/rb_insert" android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:text="@string/insert"
                         android:layout_gravity="center"/>
            <RadioButton android:textStyle="bold" android:id="@+id/rb_delete" android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:text="@string/delete"/>
            <TextView android:id="@+id/textView10" android:background="#c80a0a" android:layout_width="match_parent"
                      android:layout_height="3dp"/>
        </RadioGroup>
        <LinearLayout android:orientation="vertical" android:id="@+id/layaout_insdel" android:background="#ffffff"
                      android:layout_width="wrap_content" android:layout_height="wrap_content">
            <EditText android:id="@+id/et_f" android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:hint="@string/yyyy_mm_dd" android:ems="10"
                      android:importantForAutofill="no" android:inputType="textPersonName"/>
            <EditText android:id="@+id/et_n" android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:hint="@string/n_meros" android:ems="10" android:inputType="textPersonName"
                      android:importantForAutofill="no"/>
            <EditText android:id="@+id/et_e" android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:hint="@string/estrellas" android:ems="10" android:inputType="textPersonName"
                      android:importantForAutofill="no"/>
            <EditText android:id="@+id/et_psw" android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:hint="@string/secret" android:ems="10" android:inputType="textPassword"
                      android:importantForAutofill="no"/>
        </LinearLayout>
        <Button android:textSize="18sp" android:textStyle="bold" android:textColor="#ffffff" android:id="@+id/bt_env"
                android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/enviar"
                android:backgroundTint="#c80a0a"/>
    </LinearLayout>
    <WebView android:id="@+id/wb" android:visibility="invisible" android:layout_width="0dp"
             android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:id="@+id/textView_a" android:background="#c80a0a" android:layout_width="0dp" android:layout_height="3dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout5" app:layout_constraintEnd_toEndOf="@+id/linearLayout5" app:layout_constraintStart_toStartOf="@+id/linearLayout5"/>
    <TextView android:id="@+id/textView_d" android:background="#c80a0a" android:layout_width="2dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="@+id/linearLayout5" app:layout_constraintStart_toEndOf="@+id/linearLayout5" app:layout_constraintTop_toTopOf="@+id/textView_a"/>
    <TextView android:id="@+id/textView_i" android:background="#c80a0a" android:layout_width="2dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="@+id/linearLayout5" app:layout_constraintEnd_toStartOf="@+id/linearLayout5" app:layout_constraintTop_toTopOf="@+id/textView_a"/>
    <TextView android:id="@+id/textView4" android:background="#c80a0a" android:layout_width="0dp" android:layout_height="2dp" app:layout_constraintEnd_toEndOf="@+id/textView_d" app:layout_constraintStart_toStartOf="@+id/textView_i" app:layout_constraintTop_toBottomOf="@+id/linearLayout5"/>
</androidx.constraintlayout.widget.ConstraintLayout>
