<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:background="#FAFAFF" android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/cl_eur">
    <LinearLayout android:orientation="vertical" android:id="@+id/ly_logo" android:background="#ffffff"
                  android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="30dp"
                  app:layout_constraintEnd_toEndOf="@+id/ly_opt"
                  app:layout_constraintStart_toStartOf="@+id/ly_opt" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@+id/iv_eur" android:layout_width="match_parent" android:layout_height="90dp"
                   android:scaleType="centerInside"
                   app:srcCompat="@drawable/eurologo"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="4dp" android:id="@+id/tv_l1" android:background="#f4ff81"
                android:layout_marginTop="4dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/ly_bym"
            app:layout_constraintStart_toStartOf="@+id/ly_bym"
            app:layout_constraintTop_toBottomOf="@+id/ly_logo" android:layout_marginTop="32dp"
            android:id="@+id/ly_num" android:background="#FFFFFF">
        <ImageView android:id="@+id/iv_b1" android:layout_width="50dp" android:layout_height="50dp"
                   app:srcCompat="@drawable/bola" android:layout_weight="1"/>
        <ImageView android:id="@+id/iv_b2" android:layout_width="50dp" android:layout_height="50dp"
                   app:srcCompat="@drawable/bola" android:layout_weight="1"/>
        <ImageView android:id="@+id/iv_b3" android:layout_width="50dp" android:layout_height="50dp"
                   app:srcCompat="@drawable/bola" android:layout_weight="1"/>
        <ImageView android:id="@+id/iv_b4" android:layout_width="50dp" android:layout_height="50dp"
                   app:srcCompat="@drawable/bola" android:layout_weight="1"/>
        <ImageView android:id="@+id/iv_b5" android:layout_width="50dp" android:layout_height="50dp"
                   app:srcCompat="@drawable/bola" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="@+id/ly_num"
            app:layout_constraintBottom_toBottomOf="@+id/ly_num"
            app:layout_constraintEnd_toEndOf="@+id/ly_num"
            app:layout_constraintStart_toStartOf="@+id/ly_num" android:id="@+id/ly_tv_n">
        <TextView android:textSize="24sp" android:textStyle="bold" android:gravity="center" android:id="@+id/tv_b1"
                  android:layout_width="50dp" android:layout_height="50dp" android:text="@string/_0"
                  android:layout_weight="1"/>
        <TextView android:textSize="24sp" android:textStyle="bold" android:gravity="center" android:id="@+id/tv_b2"
                  android:layout_width="50dp" android:layout_height="50dp" android:text="@string/_0"
                  android:textAlignment="center" android:layout_weight="1"/>
        <TextView android:textSize="24sp" android:textStyle="bold" android:gravity="center" android:id="@+id/tv_b3"
                  android:layout_width="50dp" android:layout_height="50dp" android:text="@string/_0"
                  android:layout_weight="1"/>
        <TextView android:textSize="24sp" android:textStyle="bold" android:gravity="center" android:id="@+id/tv_b4"
                  android:layout_width="50dp" android:layout_height="50dp" android:text="@string/_0"
                  android:textAlignment="center" android:layout_weight="1"/>
        <TextView android:textSize="24sp" android:textStyle="bold" android:gravity="center" android:id="@+id/tv_b5"
                  android:layout_width="50dp" android:layout_height="50dp" android:text="@string/_0"
                  android:textAlignment="center" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ly_num"
            app:layout_constraintStart_toStartOf="@+id/ly_num"
            app:layout_constraintEnd_toEndOf="@+id/ly_num" android:id="@+id/ly_est"
            android:background="#FFFFFF">
        <ImageView android:id="@+id/iv_s1" android:layout_width="50dp" android:layout_height="60dp"
                   android:scaleType="fitCenter"
                   app:srcCompat="@drawable/star" android:layout_weight="1"
                   android:layout_marginStart="60dp"/>
        <ImageView android:id="@+id/iv_s2" android:layout_width="50dp" android:layout_height="60dp"
                   android:scaleType="fitCenter"
                   app:srcCompat="@drawable/star" android:layout_weight="1"
                   android:layout_marginEnd="60dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/ly_num"
            app:layout_constraintBottom_toBottomOf="@+id/ly_est"
            app:layout_constraintStart_toStartOf="@+id/ly_est"
            app:layout_constraintEnd_toEndOf="@+id/ly_est" android:id="@+id/ly_tv_e">
        <TextView android:textSize="30sp" android:textStyle="bold" android:gravity="center" android:id="@+id/tv_e1"
                  android:layout_width="50dp" android:layout_height="60dp" android:text="@string/_0"
                  android:textAlignment="center"
                  android:layout_marginStart="60dp" android:layout_weight="1"/>
        <TextView android:textSize="30sp" android:textStyle="bold" android:gravity="center" android:id="@+id/tv_e2"
                  android:layout_width="50dp" android:layout_height="60dp" android:text="@string/_0"
                  android:textAlignment="center" android:layout_marginEnd="60dp" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/ly_opt"
            app:layout_constraintEnd_toEndOf="@+id/ly_opt"
            android:id="@+id/ly_bym" app:layout_constraintTop_toBottomOf="@+id/ly_est" android:layout_marginTop="24dp">
        <TextView android:id="@+id/tv_l3" android:background="#f4ff81" android:layout_width="match_parent"
                  android:layout_height="4dp"/>
        <TextView android:textSize="24sp" android:textStyle="bold" android:id="@+id/tv_bote"
                  android:background="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/bote" android:textAlignment="center" android:paddingStart="5dp"
                  android:paddingEnd="0dp"/>
        <TextView android:textSize="24sp" android:textStyle="bold" android:id="@+id/tv_mill"
                  android:background="#ffffff"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/el_mill_n"
                  android:textAlignment="center" android:paddingStart="5dp"
                  android:paddingEnd="0dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/ly_opt" android:layout_width="0dp"
                  android:layout_height="wrap_content" android:layout_marginBottom="10dp"
                  android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
                  app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent">
        <Button android:textSize="18sp" android:textStyle="bold" android:id="@+id/bt_gen"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/generar_resultado" android:backgroundTint="#F8BFBF" android:textColor="#000000"/>
        <Button android:textSize="18sp" android:textStyle="bold" android:id="@+id/bt_qr"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/comprobar_resultados" android:backgroundTint="#F8BFBF"
                android:textColor="#000000"/>
        <Button android:textSize="18sp" android:textStyle="bold" android:id="@+id/bt_ant"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/sorteos_anteriores" android:backgroundTint="#F8BFBF" android:textColor="#000000"/>
        <Button
                android:text="@string/estad_sticas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/bt_stats" android:backgroundTint="#F8BFBF"
                android:textSize="18sp" android:textStyle="bold" android:layout_marginBottom="30dp"
                android:textColor="#000000"/>
        <Button android:textSize="18sp" android:textStyle="bold" android:id="@+id/bt_salir"
                android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp"
                android:text="@string/salir" android:backgroundTint="#f0f082"
                android:textColor="#000000"/>
    </LinearLayout>
    <WebView android:id="@+id/wb_pp" android:visibility="invisible" android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintEnd_toEndOf="@+id/ly_bym"
             app:layout_constraintStart_toStartOf="@+id/ly_bym"
             app:layout_constraintTop_toBottomOf="@+id/ly_bym"/>
</androidx.constraintlayout.widget.ConstraintLayout>
